# CPP-Templates

./: README.md
Basic Template Meson/: README.md  meson.build  setup.bat
Basic Template Meson Conan/: README.md  conanfile.txt  meson.build  setup.bat
Basic Template Meson Conan/conan-profile/: gizdefault
Basic Template Meson Conan/src/: main.cpp
Basic Template Meson/src/: main.cpp
GTest Meson GCC CCache PkgConfig/: conanfile.txt  meson.build
GTest Meson GCC CCache PkgConfig/conan-profile/: gcc-ccache
Giz Template A Meson Conan CCache/: README.md  conanfile.txt
SFML/: README.md  conanfile.txt  meson.build
SFML/src/: main.cpp
